--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <form th:action="@{/register}" method="post">
-  <input type="test" name="name">
+  <label for="name">ほげ</label>
+  <input type="test" name="name" id="name">
   <button>登録</button>
 </form>
 <ul>
