--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form th:action="@{/register}" method="post">
-  <label for="name">ｷﾀ━(ﾟ∀ﾟ)━!</label>
+  <label for="name">(๑•̀ㅂ•́)و✧</label>
   <input type="test" name="name" id="name">
   <button>登録</button>
 </form>
